--- a/frontend/src/pages/Search/index.css
+++ b/frontend/src/pages/Search/index.css
@@ -3,20 +3,6 @@ form{
     justify-content: center;
 }
 
-.footer{
-    display: flex;
-    justify-content: center;
-    color : #999999;    
-    background-color: #ffffff;
-    position: static;
-    margin-top: 70px;
-    bottom: 0px;
-    margin-right: auto;
-    margin-left: auto;
-    left: 0px;
-    right: 0px;
-}
-
 .description{
     display: flex;
     justify-items: center;
@@ -29,15 +15,18 @@ form{
     padding: 10px 0 0 0;
 }
 
-input{
-    margin: 0px;
-    width: 50%;
+.search{
+    margin: 3px;
+    width: 200px;
+    height: 40px;
     padding: 12px 20px;
-    margin: 8% 0;
-    border: 1px solid #ccc;
-    border-radius: 20px;
+    border: 1px solid  rgb(102, 112, 133);
+    margin-right: 28px;
+    color : #fafafa;
+    border-radius: 4px;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 26px;
+    font-size: 16px;
+    background: #1f2229;
     outline: none;
 }
 
@@ -79,4 +68,28 @@ div .text .info{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 15px; 
     text-align: left;
+}
+
+.logo{
+    height: 30%;
+    display: flex;
+    align-items: center;
+    align-content: center;
+}
+
+div .main-header{
+    margin-top: 10px;
+}
+
+div .main-header .header_{
+    display: flex;
+    justify-items: center;
+    justify-content: space-between;    
+    
+    padding : 2px;
+    margin: 0px;
+    background: #282c34;
+    /* border: 1px solid #dadada; */
+    /* border-radius: 2px; */
+    
 }
