--- a/frontend/src/pages/Signin/index.css
+++ b/frontend/src/pages/Signin/index.css
@@ -3,8 +3,7 @@
 }
 
 div .login-container form{
-    width: 100%;
-    max-width: 30%;
+    width: 30%;
     margin : 200px auto;
     padding: 20px 30px 20px 30px;
     border : 1px solid #dadada;
@@ -16,15 +15,16 @@ div .login-container form{
 }
 
 div .login-container form input{
+    max-width: 100%;
     height: 40px;
-    width: 350px;
+    width: 320px;
     border-radius: 8px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
     margin-bottom: 10px;
 }
 div .login-container form  button{
-    background-color: #00939A;
+    background-color: #F2BB05;
     color: #FFFFFF;
     font-weight: bold;
     height: 40px;
@@ -32,8 +32,9 @@ div .login-container form  button{
 }
 
 div .login-container #logoWaterMark{
+    max-width: 100%;
     position: absolute;
-    right: 0px;
+    left: 0px;
     bottom: 0px;
     opacity: 0.6;
 }
